# RecTools

./: .editorconfig  .gitignore  .gitmodules  .pylintrc  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE.txt  Makefile  README.md  SECURITY.md  bandit.yml  poetry.toml  pyproject.toml  requirements-dev.txt  requirements-old-versions.txt  requirements-test-old-versions.txt  requirements.txt  setup.cfg  setup.py  tst_generics_inheritance.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: publish.yml  publish_dev.yml  test.yml
benchmark/: __init__.py  requirements.txt
datasets/KION/: README.md
docker/: Dockerfile
docs/: Makefile  README.md  requirements.txt
docs/source/: api.rst  conf.py  dataset.rst  examples.rst  faq.rst  features.rst  index.rst  metrics.rst  model_selection.rst  models.rst  support.rst  tools.rst  tutorials.rst  visuals.rst
docs/source/_static/: theme.css
docs/source/_templates/: custom-class-template.rst
examples/: 10_custom_model_creation.ipynb  1_simple_example.ipynb  2_cross_validation.ipynb  3_metrics.ipynb  4_ALS_with_features.ipynb  4_dataset_with_features.ipynb  4_processing_features.ipynb  5_benchmark_iALS_with_features.ipynb  5_recsys_competition.ipynb  6_benchmark_lightfm_inference.ipynb  7_visualiser_example.ipynb  7_visualization.ipynb  8_baseline_extended_tutorial.ipynb  8_debiased_metrics.ipynb  8_metrics_tutorial.ipynb  8_two_stage_model.ipynb  9_candidate_ranking_model.ipynb  9_model_configs_and_params.ipynb  9_model_configs_and_saving.ipynb  9_two_stage_model.ipynb  MetricApp test.ipynb  bert4rec.ipynb  experiments_with_dssm.ipynb  model  sasrec_metrics.ipynb  sasrec_metrics_comp.ipynb
examples/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
examples/catboost_info/learn/: events.out.tfevents
examples/tutorials/: baselines_extended_tutorial.ipynb  candidate_ranking_model_tutorial.ipynb  custom_transformers_turorial.ipynb  hstu_test.ipynb  results.ipynb  sasrec_tutorial.ipynb  test_val_mask.ipynb  transformer_HSTU_tutorial.ipynb  transformers_HSTU_tutorial.ipynb  transformers_advanced_training_guide.ipynb  transformers_comparison.ipynb  transformers_customization_guide.ipynb  transformers_tutorial.ipynb  utils.py  validate_transformers_turorial.ipynb
extras/: requirements-nn.txt
rectools/: __init__.py  columns.py  compat.py  exceptions.py  types.py  version.py
rectools/dataset/: __init__.py  context.py  dataset.py  features.py  identifiers.py  interactions.py  torch_datasets.py
rectools/metrics/: __init__.py  auc.py  base.py  catalog.py  classification.py  coverage.py  debias.py  debias_wrapper.py  distances.py  diversity.py  dq.py  intersection.py  novelty.py  popularity.py  ranking.py  roc_auc.py  scoring.py  serendipity.py
rectools/model_selection/: __init__.py  base_split.py  cross_validate.py  kfold_split.py  last_n_split.py  random_split.py  splitter.py  time_split.py  utils.py
rectools/models/: __init__.py  base.py  bert4rec.py  candidate_ranking.py  dssm.py  dssm_double_interactions.py  dssm_no_interactions.py  ease.py  implicit_als.py  implicit_bpr.py  implicit_knn.py  lightfm.py  popular.py  popular_in_category.py  pure_svd.py  random.py  rank.py  rank_torch.py  ranker.py  rerank.py  sar.py  sasrec.py  sasrec_metrics_comp.ipynb  serialization.py  spotlight.py  utils.py  vector.py
rectools/models/nn/: __init__.py  bert4rec.py  constants.py  dssm.py  item_net.py  net_blocks.py  sasrec.py  transformer_backbone.py  transformer_base.py  transformer_data_preparator.py  transformer_lightning.py  transformer_net_blocks.py
rectools/models/nn/transformers/: __init__.py  base.py  bert4rec.py  constants.py  context_net.py  data_preparator.py  hstu.py  lightning.py  ligr.py  negative_sampler.py  net_blocks.py  sasrec.py  similarity.py  torch_backbone.py  utils.py
rectools/models/rank/: __init__.py  compat.py  rank.py  rank_implicit.py  rank_torch.py
rectools/models/ranking/: __init__.py  candidate_ranking.py  catboost_reranker.py
rectools/tools/: __init__.py  ann.py  dpp.py
rectools/utils/: __init__.py  array_set_ops.py  config.py  indexing.py  misc.py  serialization.py  visualisation.py
rectools/visuals/: __init__.py  metrics_app.py  visual_app.py
scripts/: copyright.py
tests/: __init__.py  test_compat.py  testing_utils.py
tests/dataset/: test_context.py  test_dataset.py  test_features.py  test_identifiers.py  test_interactions.py  test_torch_dataset.py
tests/metrics/: test_auc.py  test_base.py  test_catalog.py  test_classification.py  test_coverage.py  test_debias.py  test_distances.py  test_diversity.py  test_dq.py  test_intersection.py  test_novelty.py  test_popularity.py  test_ranking.py  test_roc_auc.py  test_scoring.py  test_serendipity.py
tests/model_selection/: __init__.py  test_cross_validate.py  test_kfold_split.py  test_last_n_split.py  test_random_split.py  test_spliiter.py  test_splitter.py  test_time_split.py  test_utils.py
tests/models/: data.py  test_base.py  test_candidate_ranking.py  test_dssm.py  test_ease.py  test_implicit_als.py  test_implicit_bpr.py  test_implicit_knn.py  test_lightfm.py  test_popular.py  test_popular_in_category.py  test_pure_svd.py  test_random.py  test_rank.py  test_rank_implicit.py  test_rank_torch.py  test_rerank.py  test_sar.py  test_sasrec.py  test_serialization.py  test_spotlight.py  test_utils.py  test_vector.py  utils.py
tests/models/nn/: __init__.py  test_bert4rec.py  test_bertrec.py  test_dssm.py  test_item_net.py  test_sasrec.py  test_transformer_base.py  test_transformer_data_preparator.py  utils.py
tests/models/nn/transformers/: test_base.py  test_bert4rec.py  (+5 more)
tests/models/rank/: test_rank.py  test_rank_implicit.py  test_rank_torch.py
tests/models/ranking/: test_candidate_ranking.py  test_catboost_reranker.py
tests/tools/: test_ann.py  test_distances.py
tests/utils/: test_array_set_ops.py  test_indexing.py  test_misc.py
tests/visuals/: __init__.py  test_metrics_app.py  test_visual_app.py
