[tool.poetry]
name = "RecTools"
version = "0.5.0"
description = "An easy-to-use Python library for building recommendation systems"
license = "Apache-2.0"
authors = [
    "Emiliy Feldman <feldlime@yandex.ru>",
    "Daria Tikhonovich <daria.m.tikhonovich@gmail.com>",
    "Daniil Potapov <sharth23@gmail.com>",
    "Ildar Safilo <irsafilo@gmail.com>",
    "Alexander Butenko <a.butenko.o@gmail.com>",
    "Julia Karamnova <juliakaramnova@yandex.ru>",
    "Artem Senin <artemseninhse@gmail.com>",
    "Mikhail Khasykov <mkhasykov@gmail.com>",
    "Mike Sokolov <mikesokolovv@gmail.com>",
    "Andrey Semenov <in48semenov@yandex.ru>",
]
maintainers = [
    "Emiliy Feldman <feldlime@yandex.ru>",
    "Daria Tikhonovich <daria.m.tikhonovich@gmail.com>",
]
readme = "README.md"
homepage = "https://github.com/MobileTeleSystems/RecTools"
repository = "https://github.com/MobileTeleSystems/RecTools"
documentation = "https://rectools.readthedocs.io"
keywords = [
    "recsys",
    "recommendation systems",
    "machine learning",
    "AI",
    "personalization",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
packages = [
    { include = "rectools", from = "." },
]


[tool.poetry.dependencies]
python = ">=3.7.2, <3.11"
numpy = ">=1.19.5, <2.0.0"
pandas = [
    {version = ">=0.25.3, <2.0.0", python = "<3.8"},
    {version = ">=1.0.0, <3.0.0", python = ">=3.8"}
]
scipy = "^1.5.4"
tqdm = "^4.27.0"
implicit = "^0.7.1"
attrs = ">=19.1.0,<24.0.0"
typeguard = "^2.0.1"


lightfm = {version = ">=1.16,<=1.17", optional = true}

nmslib = {version = "^2.0.4", optional = true}

torch = [
    {version = ">=1.6.0, <2.0.0", python = "<3.8", optional = true},
    {version = ">=1.6.0, <3.0.0", python = ">=3.8", optional = true}
]
pytorch-lightning = [
    {version = ">=1.6.0, <2.0.0", python = "<3.8", optional = true},
    {version = ">=1.6.0, <3.0.0", python = ">=3.8", optional = true}
]

ipywidgets = {version = ">=7.7,<8.2", optional = true}


[tool.poetry.extras]
lightfm = ["lightfm"]
nmslib = ["nmslib"]
torch = ["torch", "pytorch-lightning"]
visuals = ["ipywidgets"]
all = [
    "lightfm",
    "nmslib", 
    "torch", "pytorch-lightning",
    "ipywidgets"
]

[tool.poetry.group.dev.dependencies]
black = "22.3.0"
isort = "5.10.1"
pylint = "2.17.6"
mypy = [
    {version = "0.931", python = "<3.8"},  # not compatible with torch >= 2
    {version = "1.6.1", python = ">=3.8"}  # not compatible with python 3.7
]
flake8 = "4.0.1"
bandit = "1.7.4"
pytest = "7.1.2"
radon = "5.1.0"
coverage = "6.4.2"
autopep8 = "1.6.0"
codespell = "2.1.0"
pytest-subtests = "0.8.0"
flake8-docstrings = "1.6.0"
pep8-naming = "0.12.1"
pytest-cov = "2.12.1"
pytest-mock = "3.11.1"


[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
